# auto-stock-trading

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: evening_run.yml  morning_run.yml
data/: paper_trading.db
docs/: design.md  legal-and-tax.md  research.md  strategy-pca-leadlag.md
scripts/: backtest.py  evening_run.py  morning_run.py
src/auto_stock_trading/: __init__.py  config.py  data.py  market_calendar.py  notify.py  paper_broker.py  strategy.py
tests/: test_strategy.py
